@@ -10,6 +10,7 @@
 * Fixed a bug relating to dates in the DatabaseEditor
 * Added SOCKS4 support
 * Handle SID_CHATEVENT EID_BROADCAST
+* Added lag icons to HTMLOutputEventHandler
 
 2.1.0 (r1640) 2008-10-06:
 * Added BotNet account login
